syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "ChannelSubscriptionProtos";

package ru.dankoy.kafkamessageproducer.protos.domain.subscription.channel;

import "telegram_chat.proto";
import "coub.proto";
import "scope.proto";
import "type.proto";
import "order.proto";

message ChannelSubscription {
    int64 id = 1;
    ru.dankoy.kafkamessageproducer.protos.domain.chat.Chat chat = 2;
    ru.dankoy.kafkamessageproducer.protos.domain.coub.Coub coub = 3;
    optional string last_permalink = 4;
    Channel channel = 5;
    ru.dankoy.kafkamessageproducer.protos.domain.subscription.Order order = 6;
    ru.dankoy.kafkamessageproducer.protos.domain.subscription.Scope scope = 7;
    ru.dankoy.kafkamessageproducer.protos.domain.subscription.Type type = 8;
}

message Channel {
    int64 id = 1;
    string title = 2;
    string permalink = 3;
}

